# whitepaper

./: README.md  whitepaper.cabal
src/: main.hs
